src/main/frontend/components/block.css
/* ... */
.ls-table .ls-block {
  container-type: initial;
}

#main-content-container, #right-sidebar {
    container-type: inline-size;
}

@container (max-width: 600px) {
    .time-spent {
        display: none;
    }

    .view-actions > * {
        display: none;
    }

    .view-actions > .view-action-search,
    .view-actions > .view-action-type {
        display: inline-flex;
    }

    .block-row {
        @apply flex-col gap-0;
    }

    .ls-block-right {
        @apply gap-0 -ml-1;
    }
    .ls-page-title .ls-block-right {
        @apply ml-0;
    }
}

@container ls-block (max-width: 430px) {
    .ls-properties-area {
        display: none;
    }
}

.ls-block h1,
.editor-inner .h1.uniline-block {
  font-size: 2rem;
  min-height: 1.5em;
  line-height: 1.38em;
}

.ls-block h2,
.editor-inner .h2.uniline-block {
  font-size: 1.5rem;
  min-height: 1.5em;
  line-height: 1.38em;
}

.ls-block h3,
.editor-inner .h3.uniline-block {
  font-size: 1.2rem;
  min-height: 1.2em;
  line-height: 1.15em;
}

.ls-block h4,
.editor-inner .h4.uniline-block {
  font-size: 1rem;
  min-height: 1em;
}

.ls-block h5,
.editor-inner .h5.uniline-block {
  font-size: 0.83rem;
  min-height: 0.83em;
}

.ls-block h6,
.editor-inner .h6.uniline-block {
  font-size: 0.75rem;
  min-height: 0.75rem;
}

.ls-block :is(h1, h2, h3, h4, h5, h6),
.editor-inner .uniline-block:is(.h1, .h2, .h3, .h4, .h5, .h6),
.editor-inner .multiline-block:is(.h1, .h2, .h3, .h4, .h5, .h6)::first-line {
  font-weight: 600;
}

.editor-inner textarea.uniline-block:is(.h3, .h4, .h5, .h6) {
  line-height: 24px;
  min-height: 24px;
}

.editor-inner textarea.uniline-block.h5 {
  height: 24px !important;
}

.ls-block :is(h1, h2),
.editor-inner .uniline-block:is(.h1, .h2) {
  @apply border-b border-gray-06 mt-1 mb-2 pb-1;
}

.editor-inner textarea.uniline-block:is(.h1, .h2) {
  border-bottom-style: solid;
  border-bottom-color: transparent;
}

.block-ref .ls-block :is(h1, h2),
.block-ref .editor-inner :is(.h1, .h2) {
  border-bottom: none;
}

.block-ref :is(h1, h2, h3, h4, h5, h6) {
  border-bottom: none;
  font-size: 1rem;
}

.document-mode {
  & .ls-block h1,
  & .editor-inner .h1 {
    margin: 0.67em 0;
  }

  & .ls-block h2,
  & .editor-inner .h2 {
    margin: 0.75em 0;
  }

  & .ls-block h3,
  & .editor-inner .h3 {
    margin: 0.83em 0;
  }

  & .ls-block h4,
  & .editor-inner .h4 {
    margin: 1.12em 0;
  }

  & .ls-block h5,
  & .editor-inner .h5 {
    margin: 1.5em 0;
  }

  & .ls-block h6,
  & .editor-inner .h6 {
    margin: 1.67em 0;
  }
}

.color-level {
  background-color: var(--lx-gray-02, var(--color-level-1, var(--rx-gray-02)));

  .dark & {
    background-color: var(--lx-gray-01, var(--color-level-1, var(--rx-gray-01)));
  }

  & .color-level {
    background-color: var(--color-level-2);

    & .color-level {
      background-color: var(--color-level-3);

      & .color-level {
        background-color: var(--color-level-4);

        & .color-level {
          background-color: var(--color-level-5);

          & .color-level {
            background-color: var(--color-level-6);

            & .color-level {
              background-color: var(--color-level-4);

              & .color-level {
                background-color: var(--color-level-5);

                & .color-level {
                  background-color: var(--color-level-6);

                  & .color-level {
                    background-color: var(--color-level-4);

                    & .color-level {
                      background-color: var(--color-level-6);
                    }
                  }
                }
              }
            }
          }
        }
      }
    }
  }
}

.color-level-1 {
  background-color: var(--color-level-1);
}

.color-level-2 {
  background-color: var(--color-level-2);
}

.color-level-3 {
  background-color: var(--color-level-3);
}

.color-level-4 {
  background-color: var(--color-level-4);
}

.color-level-5 {
  background-color: var(--color-level-5);
}

.color-level-6 {
  background-color: var(--color-level-6);
}

.bullet-container {
  display: inline-flex;
  height: 1em;
  width: 1em;
  min-width: 1em;
  flex-shrink: 0;
  align-self: center;
  border-radius: 50%;
  justify-content: center;
  align-items: center;
  line-height: 1;
  vertical-align: middle;

  .bullet-heading {
    background-color: var(--ls-block-bullet-color, #8fbc8f);
  }

  &.as-order-list {
    width: 1.4em;
    min-width: 1.4em;
    @apply whitespace-nowrap justify-center pl-[3px];
  }

  .bullet {
    @apply rounded-full opacity-80;
    display: block;
    flex: none;
    width: 0.4em;
    height: 0.4em;

    > * {
      @apply cursor-pointer;
    }
  }

  &:not(.typed-list) {
    &.bullet-closed {
      background-color: var(--lx-gray-04-alpha, var(--ls-block-bullet-border-color, var(--rx-gray-04-alpha)));
    }

    .bullet {
      background-color: var(--lx-gray-08, var(--ls-block-bullet-color, var(--rx-gray-08)));
      transition: transform 0.2s;
    }
  }

  &.typed-list:not(:focus-within) {
    .bullet {
      background-color: unset;
      height: unset;
      width: unset;
      box-shadow: none;
    }
  }
}

.bullet-link-wrap {
  @apply inline-flex items-center;
  line-height: 1;
  vertical-align: middle;
  color: var(--ls-primary-text-color);

  .ui__icon {
    @apply opacity-80;
  }

  &:hover > .bullet-container:not(.typed-list) {
    background-color: var(--lx-gray-04-alpha, var(--ls-block-bullet-border-color, var(--rx-gray-04-alpha)));

    .bullet {
      transform: scale(1.2);
      background-color: var(--lx-gray-08, var(--ls-block-bullet-color, var(--rx-gray-08))) !important;
    }
  }
}

.content.doc-mode {
  margin-left: -16px;

  .block-children-left-border {
    display: none;
  }

  .block-children {
    border-left: none;
  }

  .hide-inner-bullet .bullet {
    display: none;
  }

  .block-children-container {
    margin-left: 18px;
  }
}
/* ... */

